--- a/config/landscape.config
+++ b/config/landscape.config
@@ -1,1 +1,1 @@
-{"NextImage":true,"TypeOfImage":"music","Images":null}
+{"NextImage":true,"TypeOfImage":"art","Images":["imgs/landscape/random-cartoon-bobsponge-parodies-nsfw.jpg","imgs/landscape/art-impressionism-vangogh-the_starry_night-nsfw.jpg","imgs/landscape/random-cartoons-nickelodeon-nsfw.png","imgs/landscape/art-baroque-jansteen-nsfw.jpg"],"Reload":false}
